# bicameral-mcp

./: .gitignore  pyproject.toml  setup_wizard.py
.claude/skills/bicameral-drift/: SKILL.md
.claude/skills/bicameral-ingest/: SKILL.md
.claude/skills/bicameral-search/: SKILL.md
.claude/skills/bicameral-status/: SKILL.md
.github/workflows/: publish.yml
adapters/: CLAUDE.md
code_locator/retrieval/: bm25s_client.py  sqlite_vec_client.py
code_locator/tools/: CLAUDE.md
handlers/: CLAUDE.md  ingest.py
ledger/: client.py  status.py
tests/: CLAUDE.md  eval_code_locator.py  test_desync_scenarios.py  test_ingest_symbol_resolution.py  test_phase3_integration.py
tests/fixtures/expected/: desync.py
