[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bicameral-mcp"
version = "0.2.4"
description = "Decision ledger MCP server — ingests meeting transcripts, maps decisions to code, tracks drift"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bicameral AI"}]
keywords = ["mcp", "decision-ledger", "code-locator", "drift-detection", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp[cli]>=1.6.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-c-sharp>=0.23",
  "rapidfuzz>=3.6.0",
  "bm25s>=0.2.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "python-dotenv",
  "surrealdb>=1.0.0",
]

[project.optional-dependencies]
cocoindex = [
  "cocoindex>=1.0.0a38,<2.0.0",
  "sqlite-vec>=0.1.0",
  "sentence-transformers>=2.6.0",
  "cocoindex-code>=0.1.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
bicameral-mcp = "server:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests", "visual-plan", "mocks", "test-results"]
